cluster/apps/longhorn/allow-scraping.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-scraping
  namespace: longhorn
spec:
  policyTypes:
  - Ingress
  podSelector: {}
  egress:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: prometheus-external
    ports:
      - protocol: TCP
        port: 9500
